added validation in js file

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <div id="inputs">
                 <div>
                     <label for="email">To:</label>
-                    <input type="email" id="email">
+                    <input type="email" autocomplete="off" id="email">
                 </div>
                 <div>
                     <label for="subject">Subject:</label>
-                    <input type="text" id="subject">
+                    <input type="text" id="subject" class="textValue" autocomplete="off">
                 </div>
                 <div>
                     <span>Message:</span>
-                    <textarea name="message" id="message" cols="40" rows="10"></textarea>
+                    <textarea name="message" id="message" cols="40" rows="10" class="textValue"></textarea>
                 </div>
             </div>
             <div id="buttons">
